Fixed issue with white space

--- a/src/Containers/Main-Chat/Main-Chat.scss
+++ b/src/Containers/Main-Chat/Main-Chat.scss
@@ -135,7 +135,7 @@
                     color: var(--compose-primary);
                     font-weight: 400;
                     font-size: 15px;
-                    white-space: pre-wrap;
+                    white-space: normal;
                     word-break: break-word;
                     outline: none;
                     &:focus{
